--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="skill-row">
       <img class="earth" src="https://media.giphy.com/media/U4FkC2VqpeNRHjTDQ5/giphy.gif" alt="">
       <h3 class="skil">Desgin and Develpment</h3>
-       <p class="clr0">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+       <p class="clr0">Andreas is Stupid!!!</p>
     </div>
     <div class="skill-row">
       <img class="chil" src="chillies.png" alt="">
